--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -7,18 +7,20 @@
     background-color: lightgrey;
 
     .team {
-        display: flex;
+        display: inline-flex;
         flex-direction: row;
         position: static;
         float: right;
 
         $frame-width: 256px;
         $frame-height: 144px;
+        $frame-bg: aqua;
+        $frame-bw: 16px;
 
         >div {
             @mixin player-border {
                 >div {
-                    background-color: aqua;
+                    background-color: $frame-bg;
                     height: 100%;
                     border-right: 4px solid #00000055;
                     border-left: 4px solid #FFFFFFCC;
@@ -27,7 +29,7 @@
                 >div:hover:before {
                     content: '\A';
                     position: absolute;
-                    width: $frame-width;
+                    width: ($frame-width)-($frame-bw*0.5);
                     height: $frame-height;
                     background: rgba(0, 0, 0, 0.6);
                     // opacity: 1;
@@ -42,7 +44,7 @@
                 border-bottom-right-radius: 0%;
 
                 >div {
-                    border-left: none;
+                    border-left-color: $frame-bg;
                 }
             }
 
@@ -69,7 +71,7 @@
 
             width: $frame-width;
             height: $frame-height;
-            border: 14px solid grey;
+            border: $frame-bw solid grey;
             background-color: #EEEE;
             border-radius: 8px;
             border-style: double;
