--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -1,5 +1,9 @@
 $menu-frame-bg: aqua;
 
+body {
+    margin: 0px;
+}
+
 @mixin menu-border {
     >div {
         background-color: aqua;
@@ -87,7 +91,6 @@ $menu-frame-bg: aqua;
         display: flex;
         flex-direction: column;
         position: absolute;
-        border: 1px solid red;
         width: 100%;
         height: 100vh;
 
