--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -14,12 +14,11 @@ body {
 }
 
 .App {
-    display: block;
     width: 100%;
     height: 100vh;
 
     color: green;
-    background-color: lightgrey;
+    background-color: black;
 
     .team {
         display: inline-flex;
@@ -92,14 +91,15 @@ body {
         flex-direction: column;
         position: absolute;
         width: 100%;
-        height: 100vh;
+        height: 100%;
 
         &::before {
-            display: inline-block;
             content: '\A';
+            display: inline-block;
             position: relative;
-            height: 100%;
+            flex-grow: 1;
         }
+
 
         >.options {
             display: flex;
@@ -110,34 +110,55 @@ body {
                 background-color: orange;
                 width: 128px;
                 height: 128px;
+
+                &::after {
+                    content: url('..\\assets\\sprites\\portrait.jpg');
+                    width: 128px;
+                    height: 128px;
+                }
             }
 
             @mixin item {
-                background-color: orange;
+                background-color: black;
+                border-radius: 8px;
                 width: 128px;
                 height: 128px;
+                transform-origin: top left;
+                transform: scale(97%, 97%);
+
+                border: 4px solid gold;
+                box-shadow: 2px 2px 0px 2px red;
+                
+                &:hover {
+                    transform-origin: bottom center;
+                    transform: scale(125%);
+                    z-index: 1;
+                }
             }
 
-            >div#Attack {
+            >div#Gap {
+                flex-grow: 1;
+            }
+
+            >.actions {
+                display: flex;
+            }
+            >.actions>.menu-actions {
                 @include item;
             }
-
-            >div#Energy {
-                @include item;
+            
+            >.actions>.menu-actions:first-child {
+                &:hover {
+                    transform-origin: bottom left;
+                    transform: scale(125%);
+                    z-index: 1;
+                }
             }
-
-            >div#Djinn {
-                @include item;
+            >.actions>.menu-actions:last-child {
+                &:hover {
+                    transform-origin: bottom right;
+                }
             }
-
-            >div#Summon {
-                @include item;
-            }
-
-            >div#Defend {
-                @include item;
-            }
-
 
             >div#Menu-Focused {
                 >div {
@@ -152,6 +173,5 @@ body {
                 border-style: double;
             }
         }
-
     }
 }
