--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -1,4 +1,4 @@
-$menu-frame-bg: aqua;
+$menu-frame-bg: #437286;
 
 body {
     margin: 0px;
@@ -6,7 +6,7 @@ body {
 
 @mixin menu-border {
     >div {
-        background-color: aqua;
+        background-color: $menu-frame-bg;
         height: 100%;
         border-right: 4px solid #00000055;
         border-left: 4px solid #FFFFFFCC;
@@ -17,7 +17,11 @@ body {
     width: 100%;
     height: 100vh;
 
-    color: green;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 24px;
+
+    color: lightgrey;
+    text-shadow: 2px 2px black;
     background-color: black;
 
     .team {
@@ -42,6 +46,16 @@ body {
                     background: rgba(0, 0, 0, 0.6);
                     // opacity: 1;
                     // transition: all 1s;
+                }
+            }
+
+            >div {
+                padding-left: 16px;
+
+                >div {
+                    display: inline-block;
+                    transform: translate(0, -20px);
+                    background-color: $menu-frame-bg;
                 }
             }
 
@@ -106,6 +120,10 @@ body {
             flex-direction: row;
             width: 100%;
 
+            >div {
+                text-align: center;
+            }
+
             >div#Portrait {
                 background-color: orange;
                 width: 128px;
@@ -127,12 +145,17 @@ body {
                 transform: scale(97%, 97%);
 
                 border: 4px solid gold;
-                box-shadow: 2px 2px 0px 2px red;
-                
+                box-shadow: 2px 2px 0px 2px darkred;
+
                 &:hover {
                     transform-origin: bottom center;
-                    transform: scale(125%);
+                    transform: scale(110%);
                     z-index: 1;
+                }
+
+                >img {
+                    width: 100%;
+                    height: 100%;
                 }
             }
 
@@ -143,17 +166,19 @@ body {
             >.actions {
                 display: flex;
             }
+
             >.actions>.menu-actions {
                 @include item;
             }
-            
+
             >.actions>.menu-actions:first-child {
                 &:hover {
                     transform-origin: bottom left;
-                    transform: scale(125%);
+                    transform: scale(110%);
                     z-index: 1;
                 }
             }
+
             >.actions>.menu-actions:last-child {
                 &:hover {
                     transform-origin: bottom right;
@@ -161,14 +186,24 @@ body {
             }
 
             >div#Menu-Focused {
+
                 >div {
+                    display: flex;
+                    align-items: center;
+                    height: 100%;
+                    background-color: $menu-frame-bg;
+                }
+
+                >div>div {
                     @include menu-border;
+                    padding: 16px;
+                    text-align: left;
                 }
 
                 width: 256px;
                 height: 100px;
                 border: 14px solid grey;
-                background-color: #EEEE;
+                background-color: lightgrey;
                 border-radius: 8px;
                 border-style: double;
             }
