--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -1,13 +1,26 @@
+@font-face {
+    font-family: 'DeterminationMonoWeb';
+    font-style: normal;
+    font-weight: normal;
+    src: local('DeterminationMonoWeb'),
+      url(../assets/fonts/DeterminationMonoWeb.ttf) format('truetype');
+  }
+
 $menu-frame-bg: #437286;
+
+canvas {
+    clip: rect(0, 0, 0, 0);
+}
 
 body {
     margin: 0px;
     overflow: hidden;
+    
 }
 
 button[data-tool-tip] {
     position: relative;
-    
+
     &::after {
         content: attr(data-tool-tip);
         display: block;
@@ -24,114 +37,77 @@ button[data-tool-tip] {
 
         transform: scale(0);
         transition: transform ease-out 100ms,
-        bottom ease-out 100ms;
+            bottom ease-out 100ms;
     }
-    
+
     &:is(:focus, :hover)::after {
         transform: scale(1);
         bottom: 100%;
     }
 }
 
-canvas {
-    clip: rect(0, 0, 0, 0);
+.menu-frame {
+    display: flex;
+    position: static;    
+    float: right;
+
+    border: 16px solid grey;
+    border-radius: 8px;
+    border-style: double;
+    background-color: #DDDDDD;
+
+    width: fit-content;
+    background-color: #EEEE;
 }
 
-@mixin menu-border {
-    >div {
+.mate {
+    z-index: 1;
+    display: block;
+    padding-left: 16px;
+    width: 170px;
+    border-right: 4px solid #00000055;
+    border-left: 4px solid $menu-frame-bg;
+    background-color: $menu-frame-bg;
+
+    &::before {
+        content: attr(id);
+        position: absolute;
+        transform: translate(0, -20px);
         background-color: $menu-frame-bg;
-        height: 100%;
-        border-right: 4px solid #00000055;
-        border-left: 4px solid #FFFFFFCC;
     }
+
+    >.hp {        
+    padding-top: 4px;
+    }
+}
+
+.hp {
+    display: flex;
+    &::before {
+        content: 'HP';
+        flex-grow: 1;
+    }
+    padding-right: 16px;
+}
+.pp {
+    display: flex;
+    &::before {
+        content: 'PP';
+        flex-grow: 1;
+
+    }
+    padding-right: 16px;
 }
 
 .App {
     width: 100%;
     height: 100vh;
 
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 24px;
+    font: 32px DeterminationMonoWeb;
 
     color: lightgrey;
     text-shadow: 2px 2px black;
     background-color: black;
-
-    .team {
-        display: inline-flex;
-        flex-direction: row;
-        position: static;
-        float: right;
-
-        $frame-width: 256px;
-        $frame-height: 144px;
-        $frame-bw: 16px;
-
-        >div {
-            @mixin player-border {
-                @include menu-border;
-
-                >div:hover:before {
-                    content: '\A';
-                    position: absolute;
-                    width: ($frame-width)-($frame-bw*0.5);
-                    height: $frame-height;
-                    background: rgba(0, 0, 0, 0.6);
-                    // opacity: 1;
-                    // transition: all 1s;
-                }
-            }
-
-            >div {
-                padding-left: 16px;
-
-                >div {
-                    display: inline-block;
-                    transform: translate(0, -20px);
-                    background-color: $menu-frame-bg;
-                }
-            }
-
-            &:first-child {
-                @include player-border;
-                border-right: none;
-                border-top-right-radius: 0%;
-                border-bottom-right-radius: 0%;
-
-                >div {
-                    border-left-color: $menu-frame-bg;
-                }
-            }
-
-            &:not(:first-child):not(:last-child) {
-                @include player-border;
-                border-left: none;
-                border-top-left-radius: 0%;
-                border-bottom-left-radius: 0%;
-                border-top-right-radius: 0%;
-                border-bottom-right-radius: 0%;
-                border-right: none;
-            }
-
-            &:last-child {
-                @include player-border;
-                border-left: none;
-                border-top-left-radius: 0%;
-                border-bottom-left-radius: 0%;
-
-                >div {
-                    border-right: none;
-                }
-            }
-
-            width: $frame-width;
-            height: $frame-height;
-            border: $frame-bw solid grey;
-            background-color: #EEEE;
-            border-radius: 8px;
-            border-style: double;
-        }
-    }
 
     .menu {
         display: flex;
@@ -147,16 +123,11 @@ canvas {
             flex-grow: 1;
         }
 
-
         >.options {
             display: flex;
             flex-direction: row;
             width: 100%;
-
-            >div {
-                text-align: center;
-            }
-
+            
             >div#Portrait {
                 background-color: orange;
                 width: 128px;
@@ -170,7 +141,6 @@ canvas {
             }
 
             @mixin item {
-
                 background-color: transparent;
                 border: none;
                 outline: none;
@@ -205,7 +175,7 @@ canvas {
 
             >.actions {
                 display: flex;
-                counter-reset: counter-actions;
+                // ounter-reset: counter-actions;
             }
 
             >.actions>.menu-actions {
@@ -243,29 +213,20 @@ canvas {
             }
 
             >.actions>.menu-actions:is(:focus, :hover) {
-                filter: brightness(160%)
+                filter: brightness(160%);
             }
 
-            >div#Menu-Focused {
-                >div {
-                    display: flex;
-                    align-items: center;
-                    height: 100%;
-                    background-color: $menu-frame-bg;
-                }
-
-                >div>div {
-                    @include menu-border;
-                    padding: 16px;
-                    text-align: left;
-                }
-
+            >.menu-frame {
+                display: flex;
                 width: 256px;
-                height: 100px;
-                border: 14px solid grey;
-                background-color: lightgrey;
-                border-radius: 8px;
-                border-style: double;
+                align-items: stretch;
+
+                &::before {
+                    content: attr(id);
+                    padding: 16px;        
+                    background-color: $menu-frame-bg;
+                    width: 100%;
+                }
             }
         }
     }
