--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -3,19 +3,27 @@
     font-style: normal;
     font-weight: normal;
     src: local('DeterminationMonoWeb'),
-      url(../assets/fonts/DeterminationMonoWeb.ttf) format('truetype');
-  }
+        url(../assets/fonts/DeterminationMonoWeb.ttf) format('truetype');
+}
 
 $menu-frame-bg: #437286;
 
 canvas {
-    clip: rect(0, 0, 0, 0);
+    // clip: rect(0, 0, 0, 0);
+}
+
+canvas,
+img {
+    image-rendering: optimizeSpeed;
+    image-rendering: -moz-crisp-edges;
+    image-rendering: -webkit-optimize-contrast;
+    image-rendering: optimize-contrast;
+    image-rendering: pixelated;
+    -ms-interpolation-mode: nearest-neighbor;
 }
 
 body {
     margin: 0px;
-    overflow: hidden;
-    
 }
 
 button[data-tool-tip] {
@@ -48,7 +56,6 @@ button[data-tool-tip] {
 
 .menu-frame {
     display: flex;
-    position: static;    
     float: right;
 
     border: 16px solid grey;
@@ -60,9 +67,14 @@ button[data-tool-tip] {
     background-color: #EEEE;
 }
 
+.team {
+    position: fixed;
+    right: 0;
+}
+
 .mate {
+    position: relative;
     z-index: 1;
-    display: block;
     padding-left: 16px;
     width: 170px;
     border-right: 4px solid #00000055;
@@ -76,26 +88,31 @@ button[data-tool-tip] {
         background-color: $menu-frame-bg;
     }
 
-    >.hp {        
-    padding-top: 4px;
+    >.hp {
+        padding-top: 8px;
     }
 }
 
 .hp {
     display: flex;
+
     &::before {
         content: 'HP';
         flex-grow: 1;
     }
+
     padding-right: 16px;
 }
+
 .pp {
     display: flex;
+
     &::before {
         content: 'PP';
         flex-grow: 1;
 
     }
+
     padding-right: 16px;
 }
 
@@ -112,121 +129,92 @@ button[data-tool-tip] {
     .menu {
         display: flex;
         flex-direction: column;
-        position: absolute;
-        width: 100%;
-        height: 100%;
+        position: fixed;
+        bottom: 0;
 
-        &::before {
-            content: '\A';
-            display: inline-block;
+        display: flex;
+        flex-direction: row;
+        width: 100%;
+
+        >img#Portrait {
+            background-color: orange;
+            width: 128px;
+            height: 128px;
+        }
+
+        @mixin item {
             position: relative;
+            border: none;
+            outline: none;
+
+            background-color: black;
+            border-radius: 8px;
+            width: 128px;
+            height: 128px;
+            transform-origin: top left;
+
+            border: none;
+            box-shadow: transparent;
+            &:is(:empty) {
+                border: 4px solid gold;
+                box-shadow: 2px 2px 0px 2px darkred;
+            }
+
+            &#active {
+                transform-origin: bottom center;
+                transform: scale(110%);
+                z-index: 1;
+            }
+
+            >img {
+                position: absolute;
+                left: 0;
+                top: 0;
+                width: 128px;
+                height: 128px;
+            }
+        }
+
+        >div#Gap {
             flex-grow: 1;
         }
 
-        >.options {
+        >.actions {
             display: flex;
-            flex-direction: row;
-            width: 100%;
-            
-            >div#Portrait {
-                background-color: orange;
-                width: 128px;
-                height: 128px;
+        }
 
-                &::after {
-                    content: url('..\\assets\\sprites\\portrait.jpg');
-                    width: 128px;
-                    height: 128px;
-                }
+        >.actions>.menu-actions {
+            @include item;
+        }
+
+        >.actions>.menu-actions:first-child {
+            &#active {
+                transform-origin: bottom left;
+                transform: scale(110%);
+                z-index: 1;
             }
+        }
 
-            @mixin item {
-                background-color: transparent;
-                border: none;
-                outline: none;
-
-                &:empty {
-                    background-color: black;
-                    border-radius: 8px;
-                    width: 128px;
-                    height: 128px;
-                    transform-origin: top left;
-                    transform: scale(97%, 97%);
-
-                    border: 4px solid gold;
-                    box-shadow: 2px 2px 0px 2px darkred;
-                }
-
-                &#active {
-                    transform-origin: bottom center;
-                    transform: scale(110%);
-                    z-index: 1;
-                }
-
-                >img {
-                    width: 100%;
-                    height: 100%;
-                }
+        >.actions>.menu-actions:last-child {
+            &#active {
+                transform-origin: bottom right;
             }
+        }
 
-            >div#Gap {
-                flex-grow: 1;
-            }
+        >.actions>.menu-actions:is(:focus, :hover) {
+            filter: brightness(160%);
+        }
 
-            >.actions {
-                display: flex;
-                // ounter-reset: counter-actions;
-            }
+        >.menu-frame {
+            display: flex;
+            width: 256px;
+            align-items: stretch;
 
-            >.actions>.menu-actions {
-                @include item;
-                // Counter Example
-                // counter-increment: counter-actions;
-                // &::before {
-                //     position: absolute;
-                //     content: counter(counter-actions) '. ';
-                //     background-color: #EEEEEE;
-                //     color: black;
-                //     border-radius: 50%;
-                //     width: 2em;
-                //     height: 2em;
-                //     display: flex;
-                //     justify-content: center;
-                //     align-items: center;
-
-                //     border: 4px solid red;
-                // }
-            }
-
-            >.actions>.menu-actions:first-child {
-                &#active {
-                    transform-origin: bottom left;
-                    transform: scale(110%);
-                    z-index: 1;
-                }
-            }
-
-            >.actions>.menu-actions:last-child {
-                &#active {
-                    transform-origin: bottom right;
-                }
-            }
-
-            >.actions>.menu-actions:is(:focus, :hover) {
-                filter: brightness(160%);
-            }
-
-            >.menu-frame {
-                display: flex;
-                width: 256px;
-                align-items: stretch;
-
-                &::before {
-                    content: attr(id);
-                    padding: 16px;        
-                    background-color: $menu-frame-bg;
-                    width: 100%;
-                }
+            &::before {
+                content: attr(id);
+                padding: 16px;
+                background-color: $menu-frame-bg;
+                width: 100%;
             }
         }
     }
