--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -3,7 +3,7 @@
     font-style: normal;
     font-weight: normal;
     src: local('DeterminationMonoWeb'),
-        url(../assets/fonts/DeterminationMonoWeb.ttf) format('truetype');
+        url(./golden-sun/assets/fonts/DeterminationMonoWeb.ttf) format('truetype');
 }
 
 canvas {
