--- a/src/app/golden-sun/action-button/index.scss
+++ b/src/app/golden-sun/action-button/index.scss
@@ -1,4 +1,55 @@
-.menu-actions {
+@keyframes action-button-bounce {
+    from {
+        transform: scale(100%);
+    }
+
+    to {
+        transform: scale(120%);
+    }
+}
+@keyframes action-button-flash {
+    from {
+        filter: opacity(0%);
+    }
+
+    to {
+        filter: opacity(40%);
+    }
+}
+
+@mixin flash {       
+    &::before {
+        content: '';
+        background-color: white;
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        z-index: 2;
+        
+        transform-origin: bottom center;
+        animation-name: action-button-flash;
+
+        animation-duration: 0.2s;
+        animation-iteration-count: infinite;
+        transition: transform 1000ms;
+        animation-direction: alternate;
+    }
+}
+
+@mixin bounce {
+    z-index: 2;
+    transform-origin: bottom center;
+    animation-name: action-button-bounce;
+    
+    animation-duration: 0.1s;
+    animation-iteration-count: infinite;
+    transition: transform 1000ms;
+    animation-direction: alternate;
+}
+
+.action-button {
     position: relative;
     border: none;
     outline: none;
@@ -17,10 +68,9 @@
         box-shadow: 2px 2px 0px 2px darkred;
     }
 
-    &#active {
-        transform-origin: bottom center;
-        transform: scale(110%);
-        z-index: 1;
+    &:is(:focus, :hover) {        
+        @include flash;
+        @include bounce;
     }
 
     >img {
@@ -32,7 +82,33 @@
     }
 }
 
-.menu-actions:first-child {
+.ab-tool-tip[data-tool-tip] {
+    &::after {
+        content: attr(data-tool-tip);
+        display: block;
+        position: absolute;
+        background-color: black;
+        border: 4px solid gold;
+        padding: 1em 3em;
+        color: #CCCCCC;
+        border-radius: 5px;
+        font-size: .8rem;
+        bottom: 80%;
+        white-space: nowrap;
+        filter: opacity(90%);
+
+        transform: scale(0);
+        transition: transform ease-out 100ms,
+            bottom ease-out 100ms;
+    }
+
+    &:is(:focus, :hover)::after {
+        transform: scale(1);
+        bottom: 100%;
+    }
+}
+
+.action-button:first-child {
     &#active {
         transform-origin: bottom left;
         transform: scale(110%);
@@ -40,12 +116,12 @@
     }
 }
 
-.menu-actions:last-child {
+.action-button:last-child {
     &#active {
         transform-origin: bottom right;
     }
 }
 
-.menu-actions:is(:focus, :hover) {
+.action-button:is(:hover) {
     filter: brightness(160%);
 }
