Refactoring menu layout handling

--- a/src/app/golden-sun/action-button/index.scss
+++ b/src/app/golden-sun/action-button/index.scss
@@ -49,6 +49,10 @@
     animation-direction: alternate;
 }
 
+.battle-menu {
+    position: relative;
+}
+
 .action-button {
     position: relative;
     border: none;
