Added effects to action-menu

--- a/src/app/golden-sun/action-menu-item/index.scss
+++ b/src/app/golden-sun/action-menu-item/index.scss
@@ -27,7 +27,7 @@
     }
 
 
-    &:hover {
+    &:hover, &:focus-within        {
         background-color: #ffffff33;
         filter: brightness(200%);
 
