--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -7,6 +7,9 @@ body {
 }
 
 .App {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 100vw;
     height: 100vh;
 
