--- a/src/app/GoldenSun/components/ActionButton/index.scss
+++ b/src/app/GoldenSun/components/ActionButton/index.scss
@@ -7,6 +7,7 @@
         transform: scale(120%);
     }
 }
+
 @keyframes action-button-flash {
     from {
         filter: opacity(0%);
@@ -17,7 +18,7 @@
     }
 }
 
-@mixin flash {       
+@mixin flash {
     &::before {
         content: '';
         background-color: white;
@@ -27,7 +28,7 @@
         width: 100%;
         height: 100%;
         z-index: 2;
-        
+
         transform-origin: bottom center;
         animation-name: action-button-flash;
 
@@ -42,7 +43,7 @@
     z-index: 2;
     transform-origin: bottom center;
     animation-name: action-button-bounce;
-    
+
     animation-duration: 0.1s;
     animation-iteration-count: infinite;
     transition: transform 1000ms;
@@ -59,29 +60,35 @@
 
     background-color: black;
     border-radius: 8px;
-    width: 128px;
-    height: 128px;
+    width: 8rem;
+    height: 8rem;
     transform-origin: top left;
 
     border: none;
     box-shadow: transparent;
 
+
+    &:is(:focus, :hover):not(:disabled) {
+        @include flash;
+        @include bounce;
+        filter: brightness(160%);
+    }
+
     &:is(:empty) {
         border: 4px solid gold;
         box-shadow: 2px 2px 0px 2px darkred;
     }
-
-    &:is(:focus, :hover) {        
-        @include flash;
-        @include bounce;
+    
+    &:disabled {
+        filter: brightness(50%);
     }
 
-    >img {
+    &>img {
         position: absolute;
         left: 0;
         top: 0;
-        width: 128px;
-        height: 128px;
+        width: 100%;
+        height: 100%;
     }
 }
 
@@ -109,22 +116,4 @@
         transform: scale(1);
         bottom: 100%;
     }
-}
-
-.action-button:first-child {
-    &#active {
-        transform-origin: bottom left;
-        transform: scale(110%);
-        z-index: 1;
-    }
-}
-
-.action-button:last-child {
-    &#active {
-        transform-origin: bottom right;
-    }
-}
-
-.action-button:is(:hover) {
-    filter: brightness(160%);
 }
