Started implementiong battle scene background

--- a/src/app/GoldenSun/Party/index.scss
+++ b/src/app/GoldenSun/Party/index.scss
@@ -1,5 +1,7 @@
 .team {
-    float: right;
+    position: absolute !important;
+    top: 0 !important;
+    right: 0 !important;
 
     &::before {
         content: none !important;
