--- a/src/app/GoldenSun/index.scss
+++ b/src/app/GoldenSun/index.scss
@@ -9,9 +9,9 @@
 .golden-sun {
     font: 32px DeterminationMonoWeb;
     position: relative;
-    width: 90%;
-    height: 90%;
-    border: 8px dashed gold;
+    width: 75%;
+    height: 75%;
+    // border: 8px dashed gold; // Debug outline
 
     button {
         outline: none;
