Action menu buttons now show in their menus

--- a/src/app/GoldenSun/components/ActionButton/index.scss
+++ b/src/app/GoldenSun/components/ActionButton/index.scss
@@ -68,6 +68,9 @@
 
 .battle-menu {
     position: relative;
+    display: flex;
+    flex-direction: row;
+    align-items: stretch;
 }
 
 .bounce {
