--- a/src/app/GoldenSun/Party/index.scss
+++ b/src/app/GoldenSun/Party/index.scss
@@ -1,7 +1,7 @@
 .team {
-    position: absolute !important;
-    top: 0 !important;
-    right: 0 !important;
+    // position: absolute !important;
+    // top: 0 !important;
+    // right: 0 !important;
 
     &::before {
         content: none !important;
