--- a/src/app/GoldenSun/scenes/Battle/index.scss
+++ b/src/app/GoldenSun/scenes/Battle/index.scss
@@ -29,7 +29,7 @@ img {
     bottom: 0;
     left: 0;
     right: 0;
-    
+
     // border: 4px dashed cyan; // Debug outline
     overflow: hidden;
 }
@@ -105,10 +105,11 @@ canvas {
     position: absolute;
     bottom: 0;
     left: 0;
+    width: 128px;
 }
 
 /* fixed to viewport */
-.menu-container {    
+.menu-container {
     position: absolute;
     bottom: 0;
     left: 0;
